--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+.region-primary-menu ul.menu > li:nth-child(3) {
+  flex-grow: 2;
+}
+
 ul.sf-menu li.sf-depth-1.menuparent ul {
-  margin-top: -8px;
+  margin-top: 0px;
 }
 
 
